[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/StoreMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ButtonStore.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/StoreBooks.gd" type="Script" id=3]
[ext_resource path="res://assets/Store_Books.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[node name="Store - Books" type="Node2D"]
script = ExtResource( 3 )

[node name="StoreBooks" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Book_I" parent="." instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 285.0
margin_right = 253.0
margin_bottom = 570.0

[node name="Book_II" parent="." instance=ExtResource( 2 )]
margin_left = 280.0
margin_top = 285.0
margin_right = 515.0
margin_bottom = 570.0

[node name="Book_III" parent="." instance=ExtResource( 2 )]
margin_left = 536.0
margin_top = 282.0
margin_right = 771.0
margin_bottom = 567.0

[node name="Book_IV" parent="." instance=ExtResource( 2 )]
margin_left = 787.0
margin_top = 282.0
margin_right = 1022.0
margin_bottom = 567.0

[node name="Book_V" parent="." instance=ExtResource( 2 )]
margin_left = 1031.0
margin_top = 283.0
margin_right = 1257.0
margin_bottom = 568.0

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 1059.0
margin_top = 454.0
margin_right = 1236.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 821.0
margin_top = 454.0
margin_right = 999.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 572.0
margin_top = 454.0
margin_right = 745.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 306.0
margin_top = 454.0
margin_right = 490.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 51.0
margin_top = 454.0
margin_right = 221.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Book_I" to="." method="_on_Book_I_pressed"]
[connection signal="pressed" from="Book_II" to="." method="_on_Book_II_pressed"]
[connection signal="pressed" from="Book_III" to="." method="_on_Book_III_pressed"]
[connection signal="pressed" from="Book_IV" to="." method="_on_Book_IV_pressed"]
[connection signal="pressed" from="Book_V" to="." method="_on_Book_V_pressed"]
