extends Node2D


func _ready():
	pass


func _on_Book_I_pressed():
	get_tree().change_scene("res://Scenes/StoreCart.tscn")


func _on_Book_II_pressed():
	get_tree().change_scene("res://Scenes/StoreCart.tscn")


func _on_Book_III_pressed():
	get_tree().change_scene("res://Scenes/StoreCart.tscn")


func _on_Book_IV_pressed():
	get_tree().change_scene("res://Scenes/StoreCart.tscn")


func _on_Book_V_pressed():
	get_tree().change_scene("res://Scenes/StoreCart.tscn")
